--- a/Wiki/SNES/The_7th_Saga/RAM_Map.wikitext
+++ b/Wiki/SNES/The_7th_Saga/RAM_Map.wikitext
@@ -1,64 +1,116 @@
-{{rammap}}
+{{Back|The 7th Saga (SNES)}}
 
-=Main=
+= The 7th Saga (SNES) - RAM Map =
 
-{| class="wikitable sortable"
-|-
-!  Category  !!  Address  !!  Size  !!  Description
-|-  style="background-color: #eaecf0;"
-|  ...  ||  $7e0000 - $7e1dbf  ||  $1dc0 bytes  ||  ...
-|-  style="background-color: #eaecf0;"
-|  ...  ||  $7e1dc0  ||  byte  ||  ...
-|-  style="background-color: #eaecf0;"
-|  Stats  ||  $7e1dc1  ||  byte  ||  Character Selection, 00=human(warrior), 01=dwarf, 02=elf, 03=alien, 04=tetujin, 05=human(mage), 06=demon [TODO: move these to Values page]
-|-
-|  Stats  ||  $7e1dc2 - $7e1dc3  ||  word  ||  Player's level
-|-
-|  Stats  ||  $7e1dc4 - $7e1dc5  ||  word  ||  Player's current HP
-|-
-|  Stats  ||  $7e1dc6 - $7e1dc7  ||  word  ||  Player's max HP
-|-
-|  Stats  ||  $7e1dc8 - $7e1dc9  ||  word  ||  Player's current MP
-|-
-|  Stats  ||  $7e1dca - $7e1dcb  ||  word  ||  Player's max MP
-|-  style="background-color: rgba(202, 109, 109, 0.5);"
-|  Stats  ||  $7e1dcc - $7e1dcd  ||  word  ||  Player's Power (verify?)
-|-  style="background-color: rgba(202, 109, 109, 0.5);"
-|  ...  ||  $7e1dce  ||  byte  ||  Player's Magic (verify?)
-|-  style="background-color: rgba(202, 109, 109, 0.5);"
-|  ...  ||  $7e1dcf  ||  byte  ||  Player's Speed (verify?)
-|-  style="background-color: #eaecf0;"
-|  ...  ||  $7e1dd0  ||  byte  ||  ...
-|-  style="background-color: rgba(202, 109, 109, 0.5);"
-|  ...  ||  $7e1dd1  ||  byte  ||  Player's weapon slot? (verify?)
-|-  style="background-color: rgba(202, 109, 109, 0.5);"
-|  ...  ||  $7e1dd2  ||  byte  ||  Player's armor/clock/robe slot? (verify?)
-|-  style="background-color: rgba(202, 109, 109, 0.5);"
-|  ...  ||  $7e1dd3  ||  byte  ||  Player's accessory/helmet/shield slot? (verify?)
-|-
-|  ...  ||  $7e1dd4  ||  byte  ||  ...
+This page documents the RAM memory layout for The 7th Saga.
 
-|-
-|  Stats  ||  $7e1dd5 - $7e1dd7  ||  long  ||  Experience (min = 0, max = 6,777,215)
-|-
-|  Stats  ||  $7e1dd8 - $7e1dda  ||  long  ||  Gold (min = 0, max = 6,777,215)
+==Overview==
 
+The 7th Saga uses the standard SNES memory map with 128 KB of work RAM.
 
+{| class="wikitable"
+! Range !! Size !! Description
 |-
-|  ...  ||  $7e4c00 - $7e4cfd  ||  254 bytes  ||  Inventory slots, byte 1 = item type, byte 2 = quantity
-|-  style="background-color: #eaecf0;"
-|  ...  ||  $7e4cfe - $7e4cff  ||  word  ||  Inventory ending, unknown purpose, 00 00
-|-  style="background-color: #eaecf0;"
-|  ...  ||  $7e4d00 - $7e4dff  ||  256 bytes  ||  ...
-|-  style="background-color: rgba(202, 109, 109, 0.5);"
-|  ...  ||  $7e4e00 - $7e4e1f  ||  $20 bytes  ||  Game Flags (verify?)
-|-  style="background-color: rgba(202, 109, 109, 0.5);"
-|  ...  ||  $7e4e20 - $7e4e3f  ||  $20 bytes  ||  Treasure Flags (verify?)
-|-  style="background-color: #eaecf0;"
-|  ...  ||  $7e4e40 - $7fffff  ||  $1b1c0 bytes  ||  ...
+| $7e0000-$7e1fff || 8 KB || Zero Page, Stack, and Low RAM
+|-
+| $7e2000-$7effff || 56 KB || Main Work RAM
+|-
+| $7f0000-$7fffff || 64 KB || Extended Work RAM (used for decompression buffers, map data, etc.)
 |}
 
-=Related=
-<br>
+==System RAM ($7e0000-$7e00ff)==
+
+Direct page / scratch registers area.
+
+{| class="wikitable"
+! Address !! Size !! Category !! Description
+|-
+| $7e0000-$7e00ff || 256 bytes || System || Direct page scratch space
+|}
+
+==Player Character Data ($7e1dc0-$7e1e3f)==
+
+Main character's current stats and status.
+
+{| class="wikitable"
+! Address !! Size !! Category !! Description
+|- style="background-color: #eaecf0;"
+| $7e1dc0 || byte || ... || Unknown
+|-
+| $7e1dc1 || byte || Character || Character Selection ID
+|- style="background-color: #f8f9fa;"
+| colspan="4" | '''Values:''' $00=Kamil (Knight), $01=Olvan (Dwarf), $02=Esuna (Elf), $03=Wilme (Alien), $04=Lux (Robot), $05=Valsu (Priest), $06=Lejes (Demon)
+|-
+| $7e1dc2-$7e1dc3 || word || Stats || Player's Level
+|-
+| $7e1dc4-$7e1dc5 || word || Stats || Player's Current HP
+|-
+| $7e1dc6-$7e1dc7 || word || Stats || Player's Max HP
+|-
+| $7e1dc8-$7e1dc9 || word || Stats || Player's Current MP
+|-
+| $7e1dca-$7e1dcb || word || Stats || Player's Max MP
+|- style="background-color: rgba(202, 109, 109, 0.3);"
+| $7e1dcc-$7e1dcd || word || Stats || Player's Power (needs verification)
+|- style="background-color: rgba(202, 109, 109, 0.3);"
+| $7e1dce || byte || Stats || Player's Magic (needs verification)
+|- style="background-color: rgba(202, 109, 109, 0.3);"
+| $7e1dcf || byte || Stats || Player's Speed (needs verification)
+|- style="background-color: #eaecf0;"
+| $7e1dd0 || byte || ... || Unknown
+|- style="background-color: rgba(202, 109, 109, 0.3);"
+| $7e1dd1 || byte || Equipment || Weapon slot? (needs verification)
+|- style="background-color: rgba(202, 109, 109, 0.3);"
+| $7e1dd2 || byte || Equipment || Armor/Cloak/Robe slot? (needs verification)
+|- style="background-color: rgba(202, 109, 109, 0.3);"
+| $7e1dd3 || byte || Equipment || Accessory/Helmet/Shield slot? (needs verification)
+|- style="background-color: #eaecf0;"
+| $7e1dd4 || byte || ... || Unknown
+|-
+| $7e1dd5-$7e1dd7 || 3 bytes || Stats || Experience (24-bit, max = 6,777,215)
+|-
+| $7e1dd8-$7e1dda || 3 bytes || Currency || Gold (24-bit, max = 6,777,215)
+|}
+
+==Inventory ($7e4c00-$7e4cff)==
+
+Item storage area. Each item entry is 2 bytes.
+
+{| class="wikitable"
+! Address !! Size !! Category !! Description
+|-
+| $7e4c00-$7e4cfd || 254 bytes || Inventory || Item slots (byte 1 = item type, byte 2 = quantity)
+|- style="background-color: #eaecf0;"
+| $7e4cfe-$7e4cff || word || Inventory || Ending marker (always $0000)
+|}
+
+==Game State ($7e4e00-$7e4e3f)==
+
+Flags tracking game progress and collected treasures.
+
+{| class="wikitable"
+! Address !! Size !! Category !! Description
+|- style="background-color: rgba(202, 109, 109, 0.3);"
+| $7e4e00-$7e4e1f || $20 bytes || Flags || Game progress flags (needs verification)
+|- style="background-color: rgba(202, 109, 109, 0.3);"
+| $7e4e20-$7e4e3f || $20 bytes || Flags || Treasure chest flags (needs verification)
+|}
+
+==Legend==
+
+{| class="wikitable"
+! Color !! Meaning
+|-
+| style="background-color: #ffffff;" | White || Confirmed / verified
+|-
+| style="background-color: #eaecf0;" | Gray || Unknown / undocumented
+|-
+| style="background-color: rgba(202, 109, 109, 0.3);" | Red tint || Needs verification
+|}
+
+==See Also==
+
+* [[The 7th Saga (SNES)/ROM_Map|ROM Map]]
+* [[The 7th Saga (SNES)/SRAM_Map|SRAM Map]]
 
 {{Internal Data}}
