docs: Enhance Dragon Warrior and DW4 TBL pages with overviews
Dragon Warrior:
- Add Back navigation template
- Add proper page title
- Add Overview section explaining custom encoding
- Add Encoding Summary table with character ranges
- Add ROM Location note

Dragon Warrior IV:
- Add Back navigation template
- Add proper page title
- Add Overview section explaining DTE/MTE compression
- Add Encoding Summary table with character ranges
- Add ROM Location note with bank references
- Convert TODO to proper template

--- a/Wiki/NES/Dragon_Warrior/TBL.wikitext
+++ b/Wiki/NES/Dragon_Warrior/TBL.wikitext
@@ -1,3 +1,35 @@
+{{Back|Dragon Warrior (NES)}}
+
+= Dragon Warrior (NES) - Text Table =
+
+This page documents the '''text encoding table''' for Dragon Warrior (NES).
+
+==Overview==
+
+Dragon Warrior uses a custom 8-bit character encoding for all in-game text. This is common for NES games to save ROM space and allow custom character graphics.
+
+===Encoding Summary===
+
+{| class="wikitable"
+! Range !! Characters
+|-
+| $00-$09 || Numbers 0-9
+|-
+| $0a-$23 || Lowercase a-z
+|-
+| $24-$3d || Uppercase A-Z
+|-
+| $3e-$3f || Quotation marks
+|-
+| $40-$54 || Punctuation and special characters
+|-
+| $5f || Space character
+|}
+
+===ROM Location===
+
+The font graphics are stored in CHR ROM and the text data uses the encoding below.
+
 === Text Table ===
 
 The space (<code>&nbsp;</code>) character is $5f.
