docs: Add Back templates and enhance RAM Map pages
- Final Fantasy IV RAM_Map: Add Back template, title formatting
- Mappy-Land RAM_Map: Add Back template, title formatting
- Chrono Trigger RAM_Map: Add Back template, title formatting
- Dragon Warrior II RAM_Map: Add Back template, title formatting
- Dragon Warrior III RAM_Map: Add Back template, overview section
- Yu-Gi-Oh EDS RAM_Map: Add Back template, GBA memory overview
- Yoshi's Cookie RAM_Map: Add Back template, title formatting

--- a/Wiki/GBA/Yu-Gi-Oh_Eternal_Duelist_Soul/RAM_Map.wikitext
+++ b/Wiki/GBA/Yu-Gi-Oh_Eternal_Duelist_Soul/RAM_Map.wikitext
@@ -1,7 +1,25 @@
+{{Back|Yu-Gi-Oh! The Eternal Duelist Soul (GBA)}}
 {{rammap}}
 {{stub}}
 
-=Main=
+= Yu-Gi-Oh! The Eternal Duelist Soul (GBA) - RAM Map =
+
+This page documents the RAM layout for Yu-Gi-Oh! The Eternal Duelist Soul on GBA.
+
+== Overview ==
+
+{| class="wikitable"
+|-
+! Region !! Address Range !! Size !! Description
+|-
+| EWRAM || $02000000-$0203ffff || 256 KB || External work RAM
+|-
+| IWRAM || $03000000-$03007fff || 32 KB || Internal work RAM (fast)
+|-
+| Flash || $0e000000-$0e00ffff || 64 KB || Save data storage
+|}
+
+== Main ==
 
 {| class="wikitable sortable"
 |-
