--- a/Wiki/NES/Mappy-Land/RAM_Map.wikitext
+++ b/Wiki/NES/Mappy-Land/RAM_Map.wikitext
@@ -1,15 +1,18 @@
+{{Back|Mappy-Land (NES)}}
 {{Rammap}}
 {{Cleanup}}
 
+= Mappy-Land (NES) - RAM Map =
+
 This page documents the RAM structure for '''Mappy-Land''' (NES).
 
-==Overview==
+== Overview ==
 
 Mappy-Land uses standard NES RAM ($0000-$07ff) with the standard 2 KB of work RAM.
 
-==Zero Page ($00-$ff)==
+== Zero Page ($00-$ff) ==
 
-===System Variables ($00-$1f)===
+=== System Variables ($00-$1f) ===
 
 {| class="wikitable"
 ! Address !! Size !! Description
