--- a/Wiki/GBA/Yu-Gi-Oh_Eternal_Duelist_Soul/ROM_Map.wikitext
+++ b/Wiki/GBA/Yu-Gi-Oh_Eternal_Duelist_Soul/ROM_Map.wikitext
@@ -1,7 +1,25 @@
+{{Back|Yu-Gi-Oh! The Eternal Duelist Soul (GBA)}}
 {{rommap}}
 {{stub}}
 
-=Main=
+= Yu-Gi-Oh! The Eternal Duelist Soul (GBA) - ROM Map =
+
+This page documents the ROM structure for Yu-Gi-Oh! The Eternal Duelist Soul on GBA.
+
+== Overview ==
+
+{| class="wikitable"
+|-
+! Property !! Value
+|-
+| ROM Size || 8 MB
+|-
+| Mapper || GBA cartridge
+|-
+| File Addresses || Direct mapping to $08000000
+|}
+
+== Main ==
 
 {| class="wikitable sortable"
 |-
