docs: Add Back templates to DW4 subpages
- Extra_Companions: Add Back template, overview
- Known_Dumps: Add Back template, title
- Sub-pages: Add Back template, title

--- a/Wiki/NES/Dragon_Warrior_IV/Known_Dumps.wikitext
+++ b/Wiki/NES/Dragon_Warrior_IV/Known_Dumps.wikitext
@@ -1,4 +1,10 @@
-==Known Dumps==
+{{Back|Dragon Warrior IV (NES)}}
+
+= Dragon Warrior IV (NES) - Known Dumps =
+
+This page lists the known ROM dumps for Dragon Warrior IV as documented by TOSEC.
+
+== Known Dumps ==
 
 These are the roms as they are listed in [https://www.tosecdev.org/ TOSEC].
 
