--- a/Wiki/NES/Dragon_Warrior_IV/Sub-pages.wikitext
+++ b/Wiki/NES/Dragon_Warrior_IV/Sub-pages.wikitext
@@ -1,4 +1,10 @@
-==Sub-pages==
+{{Back|Dragon Warrior IV (NES)}}
+
+= Dragon Warrior IV (NES) - Sub-pages =
+
+This page lists all sub-pages for Dragon Warrior IV documentation.
+
+== Sub-pages ==
 {{namespaces}}
 {{subpage|SRAM map}}
 {{subpage|Map Data Format}}
