docs: Add Back templates to Dragon Warrior subpages
- Battle_System: Add Back template, title formatting
- Monster_Data: Add Back template, title formatting
- Graphics_Data: Add Back template, title formatting
- Music_Pointers: Add Back template, title, description

--- a/Wiki/NES/Dragon_Warrior/Battle_System.wikitext
+++ b/Wiki/NES/Dragon_Warrior/Battle_System.wikitext
@@ -1,10 +1,11 @@
+{{Back|Dragon Warrior (NES)}}
 {{subpage}}
 
-=Dragon Warrior (NES) Battle System=
+= Dragon Warrior (NES) - Battle System =
 
 This page documents the complete battle system mechanics, formulas, and technical implementation for Dragon Warrior (NES).
 
-==Battle Overview==
+== Battle Overview ==
 
 Dragon Warrior uses a turn-based battle system with the following features:
 * One-on-one encounters (player vs single enemy)
